<resources>
    <string name="app_name">Woodland</string>
    <string name="fakecall">Fake call</string>
    <string name="settings">Settings</string>
    <string name="plus">+</string>
    <string name="feedback">%1$d mins later, approx. %2$tH:%2$tM</string>
    <string name="call_at">Fake call at %1$tH:%1$tM</string>
    <string name="title_activity_settings">Settings</string>
    <string name="plan">plan</string>
    <string name="play">play</string>

    <!-- Strings related to Settings -->

    <string name="marquee">Marquee</string>
    <string name="scrolling_text">Scrolling text</string>
    <string name="summary_scroll">Text to scroll</string>

    <string name="lolo">Lolo</string>
    <string name="title_carrier">Carrier</string>
    <string name="summary_carrier">Name of mobile operator</string>
    <string name="title_fake_name">Fake Name</string>
    <string name="summary_fake_name">Name of caller</string>
    <string name="title_fake_number">Fake Number</string>
    <string name="summary_fake_number">Number of caller</string>
    <string name="title_activity_duty">DutyActivity</string>
    <string name="title_activity_attendance">AttendanceActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
